SUBDIRS = amarok exaile

daemondir = $(pythondir)/panflute/daemon
daemon_PYTHON = 	\
	__init__.py	\
	audacious.py	\
	banshee.py	\
	clementine.py	\
	connector.py	\
	connproxy.py	\
	dbus.py		\
	decibel.py	\
	guayadeque.py	\
	listen.py	\
	manager.py	\
	moc.py		\
	mpd.py		\
	mpris.py	\
	muine.py	\
	passthrough.py	\
	pithos.py	\
	qmmp.py		\
	quodlibet.py	\
	rhythmbox.py	\
	songbird.py	\
	vlc.py		\
	xmms.py		\
	xmms2.py
