testsdir = $(pythondir)/panflute/tests
tests_PYTHON =		\
	__init__.py	\
	amarok.py	\
	audacious.py	\
	banshee.py	\
	clementine.py	\
	decibel.py	\
	exaile.py	\
	guayadeque.py	\
	listen.py	\
	moc.py		\
	mpd.py		\
	mpris.py	\
	muine.py	\
	pithos.py	\
	qmmp.py		\
	quodlibet.py	\
	rhythmbox.py	\
	runner.py	\
	songbird.py	\
	testcase.py	\
	tester.py	\
	vlc.py		\
	xmms.py		\
	xmms2.py
